<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ab"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:textSize="30sp"
            android:background="@color/blue"
            android:textColor="@color/black"/>
    <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/reg"
            android:padding="15dp"
            android:id="@+id/layout"
            android:orientation="vertical"
            android:background="@color/lighblue">

        <EditText
                android:id="@+id/edtName"
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nm"
                android:textColorHint="@color/aa"
                android:textColor="@color/black"
                android:inputType="text"
                android:imeOptions="actionNext"/>
        <Spinner
                android:layout_margin="15dp"
                android:id="@+id/spinnerGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/kl"
                android:spinnerMode="dropdown"/>
        <EditText
                android:id="@+id/edtemail"
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ml"
                android:textColorHint="@color/aa"
                android:textColor="@color/black"
                android:imeOptions="actionNext"
                android:autoLink="email"
                android:inputType="textEmailAddress"/>
        <EditText
                android:id="@+id/edtTelp"
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telp"
                android:textColorHint="@color/aa"
                android:textColor="@color/black"
                android:imeOptions="actionNext"
                android:inputType="number"/>
        <EditText
                android:id="@+id/edtAddress"
                android:layout_margin="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/adds"
                android:textColorHint="@color/aa"
                android:textColor="@color/black"
                android:inputType="textMultiLine"
                android:gravity="top"
                android:imeOptions="actionDone"/>
        <Button
                android:id="@+id/btnSave"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regi"
                android:textStyle="bold"
                android:background="@color/btn"/>
    </LinearLayout>

</RelativeLayout>